plugins {
    id 'java'
}

compileJava {
    // Set language level and binary level to 8 (binary only when building with a JDK 9+)
    // Ensures newer language features aren't used
    options.release.set(8)

    // AIJ is large, so this caches compiling results and only recompiles changed files
    options.incremental = true

    options.encoding('UTF-8')
}

dependencies {
	implementation project(':ij')
}